--- a/requirements_new.txt
+++ b/requirements_new.txt
@@ -2,13 +2,14 @@
 flask==3.0.0
 flask-cors==4.0.0
 
-# AI & ML
+# AI & ML (Render-compatible, avoid pinned Torch)
 google-generativeai==0.3.2
 openai==1.3.0
-sentence-transformers==2.2.2
-transformers==4.35.0
-torch==2.2.0
-openai-whisper==20231117
+# Optional heavy deps removed for Render build stability:
+# sentence-transformers==2.2.2
+# transformers==4.35.0
+# torch==2.2.0
+# openai-whisper==20231117
 
 # Messaging Platforms
 python-telegram-bot==20.7
@@ -21,11 +22,12 @@ pymupdf==1.23.0
 
 # Image Processing
 pillow==10.0.1
-opencv-python==4.8.1.78
+# opencv-python==4.8.1.78
 
 # Media Processing
 pydub==0.25.1
 pytube==15.0.0
+yt-dlp==2024.8.6
 
 # Web Scraping & APIs
 beautifulsoup4==4.12.2
@@ -53,5 +55,5 @@ python-dateutil==2.8.2
 gunicorn==21.2.0
 psutil==5.9.6
 
-# Scientific Computing (for embeddings)
-scikit-learn==1.3.0
+# Scientific Computing (optional)
+# scikit-learn==1.3.0
