--- a/render.yaml
+++ b/render.yaml
@@ -1,10 +1,9 @@
 services:
   - type: web
     name: jarvis-bot
-    env: python
+    env: docker
     plan: free
-    buildCommand: pip install -r requirements_new.txt
-    startCommand: gunicorn -c gunicorn.conf.py app:create_app()
+    dockerfilePath: ./Dockerfile
     envVars:
       - key: PYTHON_VERSION
         value: 3.11.0
