--- a/requirements_new.txt
+++ b/requirements_new.txt
@@ -6,10 +6,10 @@ flask-cors==4.0.0
 google-generativeai==0.3.2
 openai==1.3.0
 # Optional heavy deps removed for Render build stability:
-# sentence-transformers==2.2.2
-# transformers==4.35.0
-# torch==2.2.0
-# openai-whisper==20231117
+sentence-transformers==2.2.2
+transformers==4.35.0
+torch==2.2.0
+openai-whisper==20231117
 
 # Messaging Platforms
 python-telegram-bot==20.7
