--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ python-telegram-bot==20.7
 python-dotenv==1.0.0
 requests==2.31.0
 flask==3.0.0
+flask-cors==4.0.0
 SpeechRecognition==3.10.0
 pydub==0.25.1
 PyPDF2==3.0.1
@@ -11,3 +12,4 @@ beautifulsoup4==4.12.2
 pillow==11.0.0
 lxml==4.9.3
 PyMuPDF==1.22.5
+apscheduler==3.10.4
