--- a/requirements_minimal.txt
+++ b/requirements_minimal.txt
@@ -9,7 +9,7 @@ sentence-transformers==2.2.2
 
 # Messaging Platforms
 python-telegram-bot==20.7
-requests==2.31.0
+requests==2.32.3
 
 # Document Processing (simplified)
 PyPDF2==3.0.1
@@ -38,3 +38,4 @@ python-dateutil==2.8.2
 
 # Development & Deployment
 gunicorn==21.2.0
+yt-dlp==2024.8.6
