--- a/requirements.txt
+++ b/requirements.txt
@@ -13,3 +13,9 @@ pillow==11.0.0
 lxml==4.9.3
 PyMuPDF==1.22.5
 apscheduler==3.10.4
+yt-dlp==2023.12.30
+sentence-transformers==2.2.2
+openai-whisper==20250625
+numpy==1.24.3
+dateutil==2.8.2
+python-dateutil==2.8.2
