--- a/requirements.txt
+++ b/requirements.txt
@@ -19,3 +19,6 @@ openai-whisper==20250625
 numpy==1.24.3
 dateutil==2.8.2
 python-dateutil==2.8.2
+tweepy==4.14.0
+facebook-sdk==3.1.0
+schedule==1.2.0
