--- a/requirements_minimal.txt
+++ b/requirements_minimal.txt
@@ -38,6 +38,10 @@ python-dotenv==1.0.0
 numpy==1.24.3
 python-dateutil==2.8.2
 
+# Social Media APIs
+tweepy==4.14.0
+facebook-sdk==3.1.0
+schedule==1.2.0
+
 # Development & Deployment
 gunicorn==21.2.0
-yt-dlp==2024.8.6
