--- a/requirements.txt
+++ b/requirements.txt
@@ -4,21 +4,16 @@ python-dotenv==1.0.0
 requests==2.31.0
 flask==3.0.0
 flask-cors==4.0.0
-SpeechRecognition==3.10.0
-pydub==0.25.1
 PyPDF2==3.0.1
-pyttsx3==2.90
 beautifulsoup4==4.12.2
-pillow==11.0.0
+pillow==10.0.1
 lxml==4.9.3
-PyMuPDF==1.22.5
 apscheduler==3.10.4
-yt-dlp==2023.12.30
-sentence-transformers==2.2.2
-openai-whisper==20250625
+yt-dlp==2024.8.6
 numpy==1.24.3
-dateutil==2.8.2
 python-dateutil==2.8.2
 tweepy==4.14.0
 facebook-sdk==3.1.0
 schedule==1.2.0
+gunicorn==21.2.0
+openai==1.3.0
