--- a/requirements_memory_optimized.txt
+++ b/requirements_memory_optimized.txt
@@ -1,21 +1,20 @@
+# Ultra-lightweight requirements for Render free tier
 # Core Framework
 flask==3.0.0
 flask-cors==4.0.0
 
-# AI & ML (Essential only)
+# AI & ML (lightweight only)
 google-generativeai==0.3.2
 openai==1.3.0
-# sentence-transformers==2.2.2  # DISABLED - Too much memory
-numpy==1.24.3
 
 # Messaging Platforms
 python-telegram-bot==20.7
 requests==2.32.3
 
-# Document Processing (Basic)
+# Document Processing (basic only)
 PyPDF2==3.0.1
 
-# Image Processing
+# Image Processing (basic)
 pillow==10.0.1
 
 # Social Media & Downloads
@@ -30,10 +29,6 @@ lxml==4.9.3
 
 # Scheduling & Background Tasks
 apscheduler==3.10.4
-
-# Speech Processing - DISABLED
-# speechrecognition==3.10.0  # DISABLED - Voice not needed
-# pyttsx3==2.90              # DISABLED - Voice not needed
 
 # Utilities
 python-dotenv==1.0.0
