--- a/data/scheduled_tasks.json
+++ b/data/scheduled_tasks.json
@@ -8,5 +8,15 @@
     "priority": "medium",
     "completed": false,
     "created_at": "2025-09-17T17:34:50.358664"
+  },
+  {
+    "id": 2,
+    "title": "Pay Bills",
+    "description": "Reminder: pay bills",
+    "due_date": "2025-09-19 22:00",
+    "due_timestamp": 1758315600.0,
+    "priority": "medium",
+    "completed": false,
+    "created_at": "2025-09-19T00:43:17.770996"
   }
 ]
